--- a/Contact.html
+++ b/Contact.html
@@ -10,11 +10,30 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <header class="site-header card">
+            <div class="container header-inner">
+                <h1>cajistrators</h1>
+                <div class="menu">
+                    <input type="checkbox" id="menu">
+                    <label for="menu">
+                        <img src="img/image (1).png" class="menu-icono" alt="Menú">
+                    </label>
+                    <nav class="navbar">
+                        <ul>
+                            <li><a href="index.html">Inici</a></li>
+                            <li><a href="Contact.html">Contactans</a></li>
+                            <li><a href="obout.html">Sobre nosaltres</a></li>
+                            <li><a href="login.html">Inicia sessió</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </header>
         <h1>Contacte amb nosaltres
         </h1>
         <br>
         <hr>
-        <div class="menu container">
+        <div class="menu container" style="display: none;">
             <input type="checkbox" id="menu">
             <label for="menu">
                 <img src="img/image (1).png" class="menu-icono" alt="Menú">
