--- a/login.html
+++ b/login.html
@@ -9,11 +9,29 @@
 </head>
 
 <body>
-    <header>
-        <h1>LOGIN</h1>
-        <br>
-        <hr>
-        <div class="menu container">
+    <header class="site-header card">
+        <div class="container header-inner">
+            <h1>cajistrators</h1>
+            <div class="menu">
+                <input type="checkbox" id="menu">
+                <label for="menu">
+                    <img src="img/image (1).png" class="menu-icono" alt="Menú">
+                </label>
+                <nav class="navbar">
+                    <ul>
+                        <li><a href="index.html">Inici</a></li>
+                        <li><a href="Contact.html">Contactans</a></li>
+                        <li><a href="obout.html">Sobre nosaltres</a></li>
+                        <li><a href="login.html">Inicia sessió</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <h1 style="margin-top: 20px;">LOGIN</h1>
+    <br>
+    <hr>
+    <div class="menu container" style="display: none;">
             <input type="checkbox" id="menu">
             <label for="menu">
                 <img src="img/image (1).png" class="menu-icono" alt="Menú">
