--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
         <div class="hero-text">
             <h2>Qui som?</h2>
             <p class="lead">Som un grup de 3 estudiants que ens hem unit per crear una pàgina web sobre caixes.</p>
-            <p>La pàgina web tracta sobre les Cajistrators. A través del lloc web, es presenten els diferents models de
-                caixes, les seves característiques, usos possibles i com adquirir-les. La temàtica principal gira entorn de
-                la creativitat, el disseny i la utilitat d’aquestes caixes innovadores.</p>
+            <p>A través de aquest lloc web, es presenten els diferents models de
+                caixes, les seves característiques, usos possibles i com adquirir-les.</p>
         </div>
 
         <div class="hero-image">
