--- a/Contact.html
+++ b/Contact.html
@@ -48,7 +48,7 @@
                         </div>
                         <div class="contact-card">
                             <strong>Correu</strong>
-                            <p>info@cajasymas.example</p>
+                            <p>cajistrators@cajas.com</p>
                         </div>
                     </div>
 
