--- a/Contact.html
+++ b/Contact.html
@@ -8,6 +8,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="icon" type="image/x-icon" href="img/CajiLogo.png">
     </head>
     <body>
         </header>
@@ -25,6 +26,7 @@
                             <li><a href="Contact.html">Contactans</a></li>
                             <li><a href="obout.html">Sobre nosaltres</a></li>
                             <li><a href="login.html">Inicia sessió</a></li>
+                            <img src="img/CajiLogo.png" class="logo" alt="Logo">
                         </ul>
                     </nav>
                 </div>
