--- a/obout.html
+++ b/obout.html
@@ -25,6 +25,7 @@
                         <li><a href="Contact.html">Contactans</a></li>
                         <li><a href="obout.html">Sobre nosaltres</a></li>
                         <li><a href="login.html">Inicia sessió</a></li>
+                        <img src="img/CajiLogo.png" class="logo" alt="Logo">
                     </ul>
                 </nav>
             </div>
