--- a/Register.html
+++ b/Register.html
@@ -8,74 +8,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/style.css">
-        <style>
-            body {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                padding: 0;
-                margin: 0;
-            }
-
-            header {
-                width: 100%;
-            }
-
-            .register-wrapper {
-                width: 100%;
-                max-width: 500px;
-                margin: 40px auto;
-                padding: 20px;
-                text-align: center;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-            }
-
-            .login {
-                width: 100%;
-                text-align: center;
-            }
-
-            .login input {
-                margin-left: auto;
-                margin-right: auto;
-                display: block;
-            }
-
-            @media (max-width: 768px) {
-                body {
-                    padding: 0;
-                }
-
-                .register-wrapper {
-                    width: 90%;
-                    max-width: 100%;
-                    margin: 20px auto;
-                    padding: 15px;
-                }
-
-                .login-img {
-                    max-width: 100% !important;
-                    width: 200px !important;
-                }
-
-                .login {
-                    width: 100%;
-                    max-width: 100%;
-                }
-
-                .login input[type="text"],
-                .login input[type="password"] {
-                    width: 100% !important;
-                    max-width: 100% !important;
-                }
-            }
-        </style>
     </head>
-    <body>
+    <body class="register-page">
         <header class="site-header card">
             <div class="container header-inner">
                 <h1>cajistrators</h1>
