mejora inicio sesion

--- a/Register.html
+++ b/Register.html
@@ -29,8 +29,11 @@
                 </div>
             </div>
         </header>
+    <section class="auth-title container">
+        <h2>Register</h2>
+    </section>
+
         <div class="register-wrapper">
-            <h2>Register</h2>
             <img src="./img/Iniciar_sessio.png" alt="Iniciar sessio" class="login-img">
             <form action="./login.php" method="POST" class="login">
                 <p>
