--- a/login.html
+++ b/login.html
@@ -29,24 +29,9 @@
             </div>
         </div>
     </header>
-    <h1 style="margin-top: 20px;">LOGIN</h1>
-    <br>
-    <hr>
-    <div class="menu container" style="display: none;">
-            <input type="checkbox" id="menu">
-            <label for="menu">
-                <img src="img/image (1).png" class="menu-icono" alt="Menú">
-            </label>
-            <nav class="navbar">
-                <ul>
-                    <li><a href="index.html">Inici</a></li>
-                    <li><a href="Contact.html">Contactans</a></li>
-                    <li><a href="obout.html">Sobre nosaltres</a></li>
-                    <li><a href="login.html">Inicia sessió</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <section class="auth-title container">
+        <h2>Login</h2>
+    </section>
 
     <div class="login-container">
 
