--- a/obout.html
+++ b/obout.html
@@ -31,69 +31,51 @@
             </div>
         </div>
     </header>
-    <h1 style="margin-top: 20px;">Sobre nosaltres</h1>
-    <hr>
-    <div class="menu container" style="display: none;">
-            <input type="checkbox" id="menu">
-            <label for="menu">
-                <img src="img/image (1).png" class="menu-icono" alt="Menú">
-            </label>
-            <nav class="navbar">
-                <ul>
-                    <li><a href="index.html">Inici</a></li>
-                    <li><a href="Contact.html">Contactans</a></li>
-                    <li><a href="obout.html">Sobre nosaltres</a></li>
-                    <li><a href="login.html">Inicia sessió</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <main class="container">
+        <section class="about-hero card">
+            <div class="about-content">
+                <h1>Sobre nosaltres</h1>
+                <p class="lead">Som Cajillators: apassionats pel disseny i la creació de caixes que protegeixen i comuniquen. Transformem materials en solucions funcionals i amb estil.</p>
+                <p>Des dels nostres inicis treballem combinant disseny, enginyeria i cura pel detall per lliurar productes sostenibles i de qualitat. Ens agrada escoltar els clients i adaptar cada projecte a les seves necessitats.</p>
+                <a href="Contact.html" class="btn-1">Contacta'ns</a>
+            </div>
+            <div class="about-media">
+                <img src="img/CajiLogo.png" alt="Logo Cajillators" class="about-visual">
+            </div>
+        </section>
 
-    <section>
-        <p>Nosaltres, els fundadors de Cajillators, som un grup d'estudiants apassionats per les caixes i la seva creació.
-        La nostra missió és ensenyar-vos les nostres caixes preferides. Amb una combinació d'experiència en la creació de caixes de tot tipus, disseny i atenció al client, estem compromesos a oferir caixes de qualitat que satisfacin les necessitats dels nostres usuaris.</p>
-    </section>
-    <hr>
-
-    <main>
-        <section>
+        <section class="story card">
             <h2>La nostra història</h2>
-            <p>
-La nostra història comença amb una idea clara: crear caixes que protegeixin, comuniquin i aportin valor a cada producte. Des dels nostres inicis, hem treballat amb el compromís d'oferir solucions d'empaquetatge resistents, funcionals i adaptades a les necessitats de cada client.
-Al llarg del temps, hem crescut gràcies a la confiança d'empreses que cerquen qualitat, acompliment i atenció personalitzada. Hem incorporat millors processos, materials més eficients i un enfocament responsable amb el medi ambient, sense perdre l'essència d'una feina ben feta.
-Avui seguim evolucionant amb la mateixa passió que ens va veure néixer, fabricant caixes que no només compleixen la seva funció, sinó que també representen la imatge i l'esforç dels que confien en nosaltres.
-  </p>
-            <hr>
+            <p>La idea va néixer per la necessitat d'una presentació cuidada i funcional. Des de llavors, hem anat perfeccionant processos i materials per oferir solucions pràctiques i estètiques, amb respecte pel medi ambient.</p>
         </section>
 
-        <section>
-            <h2>El nostre equip </h2>
-            <p>El nostre equip està format per experts experts de las caixes,  persones que estarien dispostes a vendre a la seva filla per poder conseguir una caixa exclusiva com per exemple una caixa de happy meal 1999 edició ronald mcdonalds super sayan 2. Amb una combinació d'habilitats en disseny, enginyeria i atenció al client, treballem junts per oferir les millors caixes del mercat.</p>
-            <hr>
+        <section class="team card">
+            <h2>El nostre equip</h2>
+            <div class="team-grid">
+                <article class="member-card">
+                    <img src="./img/IMG-20251004-WA0012.jpg" alt="Daniel" class="avatar">
+                    <h3>Daniel Garcia Romero</h3>
+                    <p class="tagline">Disseny i prototipat</p>
+                </article>
+
+                <article class="member-card">
+                    <img src="./img/IMG-20250205-WA0025.jpg" alt="Marc" class="avatar">
+                    <h3>Marc Reus Jimenez</h3>
+                    <p class="tagline">Enginyeria i materials</p>
+                </article>
+
+                <article class="member-card">
+                    <img src="" alt="Alejandro" class="avatar"></img>
+                    <h3>Alejandro Reitman</h3>
+                    <p class="tagline">Projectes i logística</p>
+                </article>
+            </div>
         </section>
 
-        <section>
-            <h2>Nosaltres</h2>
-            <table border="1">
-                <tr>
-                    <td>Alejandro Reitman Llave Huanca</td>
-                    <td><img src="" alt="Alejandro" width="150" height="150"></td>
-                </tr>
-                <tr>
-                    <td>Daniel Garcia Romero</td>
-                    <td><img src="./img/IMG-20251004-WA0012.jpg" alt="Daniel" width="150" height="150"></td>
-                </tr>
-                <tr>
-                    <td>Marc Reus Jimenez</td>
-                    <td><img src="./img/IMG-20250205-WA0025.jpg" alt="Marc" width="150" height="150"></td>
-                </tr>
-            </table>
-            <hr>
-        </section>
-
-        <section>
+        <section class="contact card">
             <h2>Contacta'ns</h2>
-            <p>Si tens alguna pregunta, suggeriment o simplement vols dir hola, no dubtis en posar-te en contacte amb nosaltres.</p>
+            <p>Si tens alguna pregunta o vols encarregar un projecte, escriu-nos i parlarem de com podem ajudar-te.</p>
+            <a href="Contact.html" class="btn-1">Enviar missatge</a>
         </section>
     </main>
 </body>
