--- a/obout.html
+++ b/obout.html
@@ -35,8 +35,8 @@
         <section class="about-hero card">
             <div class="about-content">
                 <h1>Sobre nosaltres</h1>
-                <p class="lead">Som Cajillators: apassionats pel disseny i la creació de caixes que protegeixen i comuniquen. Transformem materials en solucions funcionals i amb estil.</p>
-                <p>Des dels nostres inicis treballem combinant disseny, enginyeria i cura pel detall per lliurar productes sostenibles i de qualitat. Ens agrada escoltar els clients i adaptar cada projecte a les seves necessitats.</p>
+                <p class="lead">Som Cajillators: apassionats uns per les caixes. Transformem materials en solucions funcionals i amb estil.</p>
+                <p>Des dels nostres inicis hem intentat donar coneixer als mon de l'entorn de les caixes i la seva importància en la protecció de productes i serveis.</p>
                 <a href="Contact.html" class="btn-1">Contacta'ns</a>
             </div>
             <div class="about-media">
@@ -46,7 +46,7 @@
 
         <section class="story card">
             <h2>La nostra història</h2>
-            <p>La idea va néixer per la necessitat d'una presentació cuidada i funcional. Des de llavors, hem anat perfeccionant processos i materials per oferir solucions pràctiques i estètiques, amb respecte pel medi ambient.</p>
+            <p>La idea va néixer per la obsesió per les caixes i la seva importància en la protecció de productes i serveis.</p>
         </section>
 
         <section class="team card">
@@ -55,19 +55,19 @@
                 <article class="member-card">
                     <img src="./img/IMG-20251004-WA0012.jpg" alt="Daniel" class="avatar">
                     <h3>Daniel Garcia Romero</h3>
-                    <p class="tagline">Disseny i prototipat</p>
+                    <p class="tagline">Desenvolupador</p>
                 </article>
 
                 <article class="member-card">
                     <img src="./img/IMG-20250205-WA0025.jpg" alt="Marc" class="avatar">
                     <h3>Marc Reus Jimenez</h3>
-                    <p class="tagline">Enginyeria i materials</p>
+                    <p class="tagline">Desenvolupador</p>
                 </article>
 
                 <article class="member-card">
                     <img src="" alt="Alejandro" class="avatar"></img>
                     <h3>Alejandro Reitman</h3>
-                    <p class="tagline">Projectes i logística</p>
+                    <p class="tagline">Desenvolupador</p>
                 </article>
             </div>
         </section>
