--- a/obout.html
+++ b/obout.html
@@ -65,7 +65,7 @@
                 </article>
 
                 <article class="member-card">
-                    <img src="" alt="Alejandro" class="avatar"></img>
+                    <img src="./img/Leiman.png" alt="Alejandro" class="avatar"></img>
                     <h3>Alejandro Reitman</h3>
                     <p class="tagline">Desenvolupador</p>
                 </article>
