--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </tr>
              <tr>
                 <td>Caixa Diners</td>
-                <td>Una caixa elegant automatica per guardar diners al super y eso </td>
+                <td>Una caixa elegant automatica per guardar diners</td>
             </tr>
             </tbody>
         </table>
