--- a/obout.html
+++ b/obout.html
@@ -74,7 +74,7 @@
 
         <section class="contact card">
             <h2>Contacta'ns</h2>
-            <p>Si tens alguna pregunta o vols encarregar un projecte, escriu-nos i parlarem de com podem ajudar-te.</p>
+            <p>Si tens alguna pregunta, escriu-nos i parlarem de com podem ajudar-te.</p>
             <a href="Contact.html" class="btn-1">Enviar missatge</a>
         </section>
     </main>
